test/modZero.slq
// args: --run

def main(){
	for x in 0..10{
		assert(x%0==x); // error
	}
}
